force-app/main/default/objects/Course__c/fields/Course_Id__c.field-meta.xml
<CustomField>
    <fullName>Course_Id__c</fullName>
    <displayFormat>COUR-{0000}</displayFormat>
    <label>Course Id</label>
    <type>AutoNumber</type>
</CustomField>