force-app/main/default/objects/Course__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Courses</relationshipLabel>
    <relationshipName>Courses</relationshipName>
    <type>Lookup</type>
</CustomField>