force-app/main/default/objects/Course__c/fields/Duration_Of_Course__c.field-meta.xml
<CustomField>
    <fullName>Duration_Of_Course__c</fullName>
    <label>Duration Of Course</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>