force-app/main/default/objects/Course__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <label>Subject</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bio</fullName>
            </value>
            <value>
                <fullName>Chem</fullName>
            </value>
            <value>
                <fullName>Phy</fullName>
            </value>
            <value>
                <fullName>Maths</fullName>
            </value>
            <value>
                <fullName>Accounts</fullName>
            </value>
            <value>
                <fullName>Economics</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>